tests/compile-fail/validity/transmute_through_ptr.stderr
error: Undefined Behavior: type validation failed at .<enum-tag>: encountered 0x0000002c, but expected a valid enum tag
  --> $DIR/transmute_through_ptr.rs:13:13
   |
LL |     let y = x; // reading this ought to be enough to trigger validation
   |             ^ type validation failed at .<enum-tag>: encountered 0x0000002c, but expected a valid enum tag
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/transmute_through_ptr.rs:13:13

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

